--- a/.github/workflows/openapi-deploy.yml
+++ b/.github/workflows/openapi-deploy.yml
@@ -31,6 +31,14 @@ jobs:
         run: |
           npm install -g redoc-cli
           redoc-cli bundle openapi.yaml -o docs/index.html
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my_site
+          path: ./docs
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./docs
       
   deploy:
     needs: test_job
